--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
 <button id="event-start" type="button">This is your event listener that you will test with.</button>  
 
 
+
+<!-- Firebase code/ Start -->
+
+<script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDkYh29_wmaPHm1UOIqCzPT62peN6yWl-c",
+    authDomain: "theme-park-secret-agents.firebaseapp.com",
+    databaseURL: "https://theme-park-secret-agents.firebaseio.com",
+    projectId: "theme-park-secret-agents",
+    storageBucket: "theme-park-secret-agents.appspot.com",
+    messagingSenderId: "621759477806"
+  };
+  firebase.initializeApp(config);
+</script>
+
+<!-- Firebase code/ End -->
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
