added map area divs and footer info

--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
 <body>
   
      <h1>TEST SITE FOR JS</h1>
-    <div class="main-box">
+     
+     <button id="event-start" type="button">This is your event listener that you will test with.</button>  
 
-
-
-    <!-- Insert content here from JS -->
+     <div id="main-area" style="width: 30%">
+        <div class="theme-map" id="area1">001</div>
+        <div class="theme-map" id="area2">002</div>
+        <div class="theme-map" id="area3">003</div>
+        <div class="theme-map" id="area4">004</div>
+        <div class="theme-map" id="area5">005</div>
+        <div class="theme-map" id="area6">006</div>
+        <div class="theme-map" id="area7">007</div>
+        <div class="theme-map" id="area8">008</div>
     </div>
 
-<button id="event-start" type="button">This is your event listener that you will test with.</button>  
 
 
+    <div id="footer">
+        <footer id="showdate">
+            <p id="todaysDate"></p>
+        </footer>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
-<script src=“dist/app.js”></script>
-<script src=""></script>
+<!-- <script src=“dist/app.js”></script> -->
+<script src="js/area.js"></script>
 
 </body>
 </html>
