adding div theme map area

--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
 
 <button id="event-start" type="button">This is your event listener that you will test with.</button>  
 
+<div id="main-area" style="width: 30%">
+        <div class="theme-map" id="area1">001</div>
+        <div class="theme-map" id="area2">002</div>
+        <div class="theme-map" id="area3">003</div>
+        <div class="theme-map" id="area4">004</div>
+        <div class="theme-map" id="area5">005</div>
+        <div class="theme-map" id="area6">006</div>
+        <div class="theme-map" id="area7">007</div>
+        <div class="theme-map" id="area8">008</div>
+    </div>
 
+
+
+    <div id="footer">
+        <footer id="showdate">
+            <p id="todaysDate">&copy; 2018. Designed by the Shockwave Secret Agents.</p>
+        </footer>
+    </div>
 
 <!-- Firebase code/ Start -->
 
